[package]
name = "replace-types"
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
edition = "2021"
version = "0.1.1"
description = "Extension trait for replacing TypePath"
readme = "./README.md"
license = "MIT"
repository = "https://github.com/Bajix/replace-types/"

[lib]
test = false
doctest = false

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }

[package.metadata.docs.rs]
all-features = false
rustdoc-args = ["--cfg", "docsrs"]