[package]
name = "replace-types"
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
edition = "2021"
version = "0.2.0"
description = "A syn visitor that replaces types"
readme = "./README.md"
license = "MIT"
repository = "https://github.com/Bajix/replace-types/"

[lib]
test = false
doctest = false

[dependencies]
syn = { version = "2", features = ["extra-traits", "visit-mut"] }

[package.metadata.docs.rs]
all-features = false
rustdoc-args = ["--cfg", "docsrs"]